src/pages/Film/components/Media/Media.module.css
.media {
  position: sticky;
  top: calc(var(--header-height) + 20px);
  flex-shrink: 0;
  width: 300px;
  border-radius: var(--app-border-radius);
  overflow: hidden;
}

.track {
  display: flex;
  transition: transform 0.3s ease;
}

.modalContent {
  width: 80%;
}

@media (max-width: 870px) {
  .media {
    width: 200px;
  }
}

@media (max-width: 580px) {
  .media {
    position: static;
    width: 100%;
  }
  .modalContent {
    width: 90%;
  }
}

